# asleepace.com

./: .gitignore  .tool-versions  CHANGELOG.md  README.md  READMEOLD.md  SERVER.md  SMTP.md  astro.config.mjs  bun.lockb  chat.txt  db.sqlite  ecosystem.config.mjs  exported_chat.txt  next.config.js  package-lock.json  package.json  servicePermissions.json  tailwind.config.mjs  tailwind.config.mjs.txt  tsconfig.json
.astro/: content-modules.mjs  data-store.json  settings.json
.astro/collections/: blog.schema.json
.devcontainer/: Dockerfile  devcontainer.json  nginx-dev.conf
.github/workflows/: deploy.yaml
app/: index.html
app/clock/: index.html  style.css
app/css/: styles.css
backend/: Cargo.toml  build.rs  migration.sh  schema.sql
backend/queries/: users.sql
backend/src/: auth.rs  cornucopia.rs  db.rs  main.rs
db/: config.ts  schema.sql  seed.ts
docs/: POSTGRES.md  README.md  WEBAUTHN.md  alpha.md  ci-cd.md  daily-report-card.html  setup.md  tutorial.md  welcome.md
prisma/: schema.prisma
public/: index.html  robots.txt  site.webmanifest
public/daily/: report-2025-12-01.json  report-2025-12-01.md
reddit/: README.md  index.ts  package.json
scripts/: background-sync.sh  deploy-fast.sh  deploy-old.sh  deploy.sh  email.html  extract-imessage.sh  notify.sh  package.json  shell.ts  test-reddit-access.sh
services/: ABOUT.md  README.md  pg_hba.conf  postgresql.conf
services/misc/: README.md
services/nginx/: ABOUT.md  nginx.conf  (+1 more)
src/: App.tsx  config.ts  consts.ts  content.config.ts  env.d.ts  middleware.ts  types.ts
undefined/: today.md
(+361 files in other folders)
